--- a/src/index.html
+++ b/src/index.html
@@ -43,21 +43,20 @@
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
-              <!-- <img
+              <img
                 alt="Profile Image"
                 class="img-fluid rounded shadow-lg"
                 height="auto"
-                width="300px"
-                src="assets/profile.jpg"
+                width="600px"
+                src="assets/project.jpg"
                 alt="Profile Image"
-              /> -->
-              Profile Image
+              />
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Hey there! I'm Clayton, a 20 year old computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Astro, Svelte, and SvelteKit.
+                Hey there! I'm Clayton, a 20 year old computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit.
                 <br />
                 <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -110,7 +109,7 @@
                 <a
                   rel="noreferrer"
                   target="_blank"
-                  class="cta-btn cta-btn--hero"
+                  class="cta-btn cta-btn--hero cta-btn--live"
                   href="!#"
                 >
                   See Live
@@ -538,78 +537,6 @@
                   />
                 </a>
               <h1>Project 6</h1>
-              <div class="flex justify-center items-center pb-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
-              </div>
-              <div class="card-buttons">
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="notable-mentions-live-btn"
-                  href="!#"
-                  >See Live</a
-                >
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/"
-                >
-                Source Code
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </li>
-          <!-- TODO: Add Project 7 -->
-          <li>
-            <div class="card">
-              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <img
-                  class="card-image"
-                  src="./assets/project.jpg"
-                  alt="Project Image"
-                  />
-                </a>
-              <h1>Project 7</h1>
-              <div class="flex justify-center items-center pb-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
-              </div>
-              <div class="card-buttons">
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="notable-mentions-live-btn"
-                  href="!#"
-                  >See Live</a
-                >
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/"
-                >
-                Source Code
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </li>
-          <!-- TODO: Add Project 8 -->
-          <li>
-            <div class="card">
-              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
-                <img
-                  class="card-image"
-                  src="./assets/project.jpg"
-                  alt="Project Image"
-                  />
-                </a>
-              <h1>Project 8</h1>
               <div class="flex justify-center items-center pb-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
