--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,8 @@
                 Hey there! I'm Clayton, a 20 year old computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit.
                 <br />
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                In my free time, I enjoy listening to music, spending time with family and friends, cycling outdoors, coding, and playing video games. I also find myself watching a lot of YouTube videos and reading articles about web development
+                and the ever-changing technologies. I'm always looking for new opportunities to learn and grow as a developer, so after you check out my work, feel free to reach out to me!
               </p>
 
               <span class="d-flex mt-3 mb-3">
@@ -378,17 +379,17 @@
           </li>
           <li>
             <div class="card">
-              <a href="https://clay-k0.github.io/insta-quote/" target="_blank" rel="noreferrer">
+              <a href="https://clay-k0-ematchi.vercel.app/" target="_blank" rel="noreferrer">
                 <img
-                class="card-image"
-                src="./assets/insta-quote-screenshot.png"
-                alt="Project Image"
-                />
-              </a>
-              <h1>Instaquote</h1>
-              <div class="flex justify-center items-center pb-3 pt-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                  class="card-image"
+                  src="./assets/ematchi-screenshot.png"
+                  alt="Project Image"
+                  />
+                </a>
+              <h1>Ematchi</h1>
+              <div class="flex justify-center items-center pb-3">
+                <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
+                  <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                 </a>
               </div>
               <div class="card-buttons">
@@ -396,17 +397,17 @@
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-live-btn"
-                  href="https://clay-k0.github.io/insta-quote/"
+                  href="https://clay-k0-ematchi.vercel.app/"
                   >See Live</a
                 >
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/insta-quote"
-                  >
-                  Source Code
-                  <i class="fa fa-angle-right" aria-hidden="true"></i>
+                  href="https://github.com/clay-k0/ematchi"
+                >
+                Source Code
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -490,20 +491,19 @@
               </div>
             </div>
           </li>
-          <!-- TODO: Add Project 5 -->
           <li>
             <div class="card">
-              <a href="!#" target="_blank" rel="noreferrer">
+              <a href="https://clay-k0.github.io/insta-quote/" target="_blank" rel="noreferrer">
                 <img
-                  class="card-image"
-                  src="./assets/project.jpg"
-                  alt="Project Image"
-                  />
-                </a>
-              <h1>Project 5</h1>
-              <div class="flex justify-center items-center pb-3">
+                class="card-image"
+                src="./assets/insta-quote-screenshot.png"
+                alt="Project Image"
+                />
+              </a>
+              <h1>Instaquote</h1>
+              <div class="flex justify-center items-center pb-3 pt-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                 </a>
               </div>
               <div class="card-buttons">
@@ -511,17 +511,17 @@
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-live-btn"
-                  href="!#"
+                  href="https://clay-k0.github.io/insta-quote/"
                   >See Live</a
                 >
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/"
-                >
-                Source Code
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                  href="https://github.com/clay-k0/insta-quote"
+                  >
+                  Source Code
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
