Added TS icon to ematchi

--- a/src/index.html
+++ b/src/index.html
@@ -391,6 +391,9 @@
                 <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
                   <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                 </a>
+                <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer" title="TypeScript">
+                  <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TypeScript Icon"/>
+                </a>
               </div>
               <div class="card-buttons">
                 <a
