--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
                 Hey there! I'm Clayton, a 20 year old computer science major who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit.
                 <br />
                 <br />
-                In my free time, I enjoy listening to music, spending time with family and friends, cycling outdoors, coding, and playing video games. I also find myself watching a lot of YouTube videos and reading articles about web development
-                and the ever-changing technologies. I'm always looking for new opportunities to learn and grow as a developer, so after you check out my work, feel free to reach out to me!
+                In my free time, I enjoy listening to music, spending time with family and friends, cycling outdoors, coding, and playing video games. I also find myself watching a lot of YouTube videos and reading articles about the web
+                and its ever-changing technologies. I'm always looking for new opportunities to learn and grow as a developer, so after you check out my work, feel free to email me!
               </p>
 
               <span class="d-flex mt-3 mb-3">
