--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
       </div>
     </section>
 
+
     <a rel="noreferrer" href="https://github.com/clay-k0" target="_blank">
       <i class="github-icon fa fa-github fa-inverse"></i>
     </a>
@@ -247,7 +248,7 @@
                 alt="Project Image"
                 /></a>
                 <h1>robofriends</h1>
-                <p>simple react search app</p>
+                <p>basic react app w/ search feature</p>
                 <div class="flex justify-center items-center pb-3 pt-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
