--- a/src/index.html
+++ b/src/index.html
@@ -241,7 +241,7 @@
         <ul class="notable-mentions-list">
           <li>
             <div class="card">
-              <a href="http://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
+              <a href="https://clay-k0.github.io/RoboFriends-App/" target="_blank" rel="noreferrer">
                 <img
                 class="card-image"
                 src="./assets/robo-friends-screenshot.png"
@@ -259,14 +259,14 @@
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-live-btn"
-                  href="https://clay-k0.github.io/"
+                  href="https://clay-k0.github.io/RoboFriends-App/"
                   >visit site</a
                 >
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="notable-mentions-source-btn"
-                  href="https://github.com/clay-k0/"
+                  href="https://github.com/clay-k0/RoboFriends-App"
                   >
                   code
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
