removed animations for now

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <div class="navbar">
       <a href="/" class="site-logo">{ck}</a>
       <ul>
-        <li><a href="/">home</a></li>
+        <li><a href="/#top">home</a></li>
         <li><a href="/#about">about</a></li>
         <li><a href="/#projects">projects</a></li>
         <li><a href="/#contact">contact</a></li>
@@ -41,12 +41,12 @@
 
     <section id="hero" class="jumbotron">
       <div class="container">
-        <h1 class="hero-title load-hidden">
+        <h1 class="hero-title ">
           hello, i'm <span class="text-color-main">clayton king</span>,
           <br />
           an aspiring web <span class="typing-effect">developer.</span>
         </h1>
-        <p class="hero-cta load-hidden">
+        <p class="hero-cta ">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
             about me
           </a>
@@ -62,10 +62,10 @@
     <!-- TODO: Add image of me -->
     <section id="about">
       <div class="container">
-        <h2 class="section-title load-hidden">about me</h2>
+        <h2 class="section-title ">about me</h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image load-hidden">
+            <div class="about-wrapper__image ">
               <img
                 alt="Profile Image"
                 class="img-fluid rounded shadow-lg"
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__info load-hidden">
+            <div class="about-wrapper__info ">
               <p class="about-wrapper__info-text">
                 Hey there! I'm Clayton, a 20 year old computer science student who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit. In my free time, I enjoy listening to music, spending time with family and friends, cycling outdoors, coding, and playing video games. I'm always looking for new opportunities to learn and grow as a developer, so after seeing my work, feel free to email me!
               </p>
@@ -104,8 +104,8 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">projects</h2>
-          <h3 class="project-group-title section-title">
+          <h2 class="section-title dark-blue-text ">projects</h2>
+          <h3 class="project-group-title section-title ">
             <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon" />
             react/next.js
           </h3>
@@ -113,7 +113,7 @@
           <!-- TODO: Add React Project 1 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
+              <div class="project-wrapper__text ">
                 <h3 class="project-wrapper__text-title">react project 1</h3>
                 <div>
                   <p class="mb-4">
@@ -146,7 +146,7 @@
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
+              <div class="project-wrapper__image ">
                 <a
                   rel="noreferrer"
                   href="!#"
@@ -170,7 +170,7 @@
             </div>
           </div>
 
-        <h3 class="project-group-title section-title">
+        <h3 class="project-group-title section-title ">
           <img class="svelte-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
           svelte/sveltekit
         </h3>
@@ -178,7 +178,7 @@
         <!-- TODO: Add Svelte Project 1 -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text load-hidden">
+            <div class="project-wrapper__text ">
               <h3 class="project-wrapper__text-title">svelte project 1</h3>
               <div>
                 <p class="mb-4">
@@ -211,7 +211,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image load-hidden">
+            <div class="project-wrapper__image ">
               <a
                 rel="noreferrer"
                 href="!#"
@@ -475,7 +475,7 @@
     <section id="contact">
       <div class="container">
         <h2 class="section-title">contact</h2>
-        <div class="contact-wrapper load-hidden">
+        <div class="contact-wrapper ">
           <p class="contact-wrapper__text">
             feel free to reach out to me at any time!
           </p>
@@ -492,10 +492,10 @@
 
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top" title="Back To Top">
+        <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="social-links">
+        <!-- <div class="social-links">
           <a
             rel="noreferrer"
             href="https://www.linkedin.com/in/clayton-king-8707a7270/"
@@ -506,7 +506,7 @@
           <a rel="noreferrer" href="https://github.com/clay-k0" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-        </div>
+        </div> -->
 
         <hr />
 
