added hidden load to hero elements

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <div id="top"></div>
 
   <body>
-    <div class="navbar">
+    <div class="navbar load-hidden">
       <a href="/" class="site-logo">{ck}</a>
       <ul>
         <li><a href="/#top">home</a></li>
@@ -39,7 +39,7 @@
     </div>
 
 
-    <section id="hero" class="jumbotron">
+    <section id="hero" class="jumbotron load-hidden">
       <div class="container">
         <h1 class="hero-title ">
           hello, i'm <span class="text-color-main">clayton king</span>,
@@ -56,7 +56,7 @@
 
 
     <a rel="noreferrer" href="https://github.com/clay-k0" target="_blank">
-      <i class="github-icon fa fa-github fa-inverse"></i>
+      <i class="github-icon fa fa-github fa-inverse load-hidden"></i>
     </a>
 
     <!-- TODO: Add image of me -->
