--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <title>clayton king | web developer</title>
-    <meta name="keywords" content="clay-k0, Clayton King, JavaScript" />
-    <meta name="description" content="Clayton King | Web Developer" />
+    <title>Clayton King | Web Developer</title>
+    <meta name="keywords" content="clay-k0, Clayton King, Developer" />
+    <meta name="description" content="Clayton King" />
 
     <link
       rel="stylesheet"
@@ -29,26 +29,26 @@
 
   <body>
     <div class="navbar load-hidden">
-      <a href="/" class="site-logo">{ck}</a>
+      <a href="/" class="site-logo">ck.</a>
       <ul>
-        <li><a href="/#top">home</a></li>
-        <li><a href="/#about">about</a></li>
-        <li><a href="/#projects">projects</a></li>
-        <li><a href="/#contact">contact</a></li>
+        <li><a href="/#top">Home</a></li>
+        <li><a href="/#about">About</a></li>
+        <li><a href="/#projects">Projects</a></li>
+        <li><a href="/#contact">Contact</a></li>
       </ul>
     </div>
 
 
     <section id="hero" class="jumbotron load-hidden">
       <div class="container">
-        <h1 class="hero-title ">
-          hello, i'm <span class="text-color-main">clayton king</span>,
+        <h1 class="hero-title">
+          Hello, I'm <span class="text-color-main">Clayton King</span>, a student
           <br />
-          an aspiring web <span class="typing-effect">developer.</span>
+          and an aspiring web developer.
         </h1>
-        <p class="hero-cta ">
+        <p class="hero-cta">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
-            about me
+            About Me
           </a>
         </p>
       </div>
@@ -59,10 +59,12 @@
       <i class="github-icon fa fa-github fa-inverse load-hidden"></i>
     </a>
 
-    <!-- TODO: Add image of me -->
+    <hr>
+
+    <!-- TODO: Add better image of me -->
     <section id="about">
       <div class="container">
-        <h2 class="section-title ">about me</h2>
+        <h2 class="section-title ">About Me</h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image ">
@@ -79,7 +81,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info ">
               <p class="about-wrapper__info-text">
-                Hey there! I'm Clayton, a 20 year old computer science student who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit. In my free time, I enjoy listening to music, spending time with family and friends, cycling outdoors, coding, and playing video games. I'm always looking for new opportunities to learn and grow as a developer, so after seeing my work, feel free to email me!
+                Hey there! I'm Clayton, a 20 year old computer science student who is also learning web development. I'm a semester away from being a junior at Old Dominion University, and I'm passionate about learning new technologies and building projects that solve real-world problems. When it comes to libraries/frameworks, I mainly use React and Next.js, but I'm currently learning Svelte and SvelteKit. In my free time, I enjoy listening to music, collecting vinyl, spending time with family and friends, cycling outdoors, and coding. I'm always looking for new opportunities to learn and grow as a developer, so after taking a look at my work, feel free to email me!
               </p>
 
               <span class="d-flex mb-3">
@@ -89,10 +91,10 @@
                   class="cta-btn cta-btn--resume mx-2"
                   href="assets/resume.pdf"
                 >
-                  view resume
+                  View Resume
                 </a>
                 <a class="cta-btn cta-btn--projects mx-2" href="#projects">
-                  view projects
+                  View Projects
                 </a>
               </span>
             </div>
@@ -101,26 +103,27 @@
       </div>
     </section>
 
+    <hr>
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text ">projects</h2>
-          <h3 class="project-group-title section-title ">
+          <h2 class="section-title dark-blue-text ">Projects</h2>
+          <!-- <h3 class="project-group-title section-title ">
             <img class="react-icon" src="./assets/icons/react-icon.svg" alt="React Icon" />
-            react/next.js
-          </h3>
+            React/Next.js
+          </h3> -->
 
-          <!-- TODO: Add React Project 1 -->
+          <!-- TODO: Add Project 1 -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text ">
-                <h3 class="project-wrapper__text-title">react project 1</h3>
+                <h3 class="project-wrapper__text-title">01 // Project 1</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
-                  <h1 class="pt-3 pb-4">tech</h1>
-                  <div class="pb-4">
+                  <!-- <h1 class="pt-3 pb-4">tech</h1> -->
+                  <div class="pb-4 pt-4">
                     <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                       <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                     </a>
@@ -132,7 +135,7 @@
                   class="cta-btn cta-btn--hero cta-btn--live"
                   href="!#"
                 >
-                  visit site
+                  Visit Site
                 </a>
                 <a
                   rel="noreferrer"
@@ -140,7 +143,7 @@
                   class="cta-btn text-color-main"
                   href="https://github.com/clay-k0/"
                 >
-                  code
+                  Code
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -170,22 +173,22 @@
             </div>
           </div>
 
-        <h3 class="project-group-title section-title ">
+        <!-- <h3 class="project-group-title section-title ">
           <img class="svelte-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
           svelte/sveltekit
-        </h3>
+        </h3> -->
 
-        <!-- TODO: Add Svelte Project 1 -->
+        <!-- TODO: Add Project 2 -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text ">
-              <h3 class="project-wrapper__text-title">svelte project 1</h3>
+              <h3 class="project-wrapper__text-title">02 // Project 2</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <h1 class="pb-4">tech</h1>
-                <div class="pb-4">
+                <!-- <h1 class="pb-4">tech</h1> -->
+                <div class="pb-4 pt-4">
                   <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
                     <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                   </a>
@@ -197,7 +200,7 @@
                 class="cta-btn cta-btn--hero"
                 href="!#"
               >
-                visit site
+                Visit Site
               </a>
               <a
                 rel="noreferrer"
@@ -205,7 +208,7 @@
                 class="cta-btn text-color-main"
                 href="https://github.com/clay-k0/"
               >
-                code
+                Code
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </a>
             </div>
@@ -237,7 +240,7 @@
 
       <hr />
       <div>
-        <h1 class="section-title notable-mentions-title">smaller mentions</h1>
+        <h1 class="section-title notable-mentions-title">Smaller Mentions</h1>
         <ul class="notable-mentions-list">
           <li>
             <div class="card">
@@ -247,8 +250,8 @@
                 src="./assets/robo-friends-screenshot.png"
                 alt="Project Image"
                 /></a>
-                <h1>robofriends</h1>
-                <p>basic react app w/ search feature</p>
+                <h1>RoboFriends</h1>
+                <p>Basic react app w/ search feature</p>
                 <div class="flex justify-center items-center pb-3 pt-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
@@ -260,7 +263,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="https://clay-k0.github.io/RoboFriends-App/"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -268,7 +271,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/RoboFriends-App"
                   >
-                  code
+                  Code
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a
                 >
@@ -284,8 +287,8 @@
                   alt="Project Image"
                   />
                 </a>
-              <h1>ematchi</h1>
-              <p>svelte matching memory game</p>
+              <h1>Ematchi</h1>
+              <p>Svelte matching memory game</p>
               <div class="flex justify-center items-center pb-3">
                 <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
                   <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
@@ -300,7 +303,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="https://clay-k0-ematchi.vercel.app/"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -308,7 +311,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/ematchi"
                 >
-                code
+                Code
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -323,8 +326,8 @@
                   alt="Project Image"
                 />
               </a>
-              <h1>memento</h1>
-              <p>react matching memory game</p>
+              <h1>Memento</h1>
+              <p>React matching memory game</p>
               <div class="flex justify-center items-center pb-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
@@ -339,7 +342,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="https://memento-d6cac.web.app/"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -347,7 +350,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/memento"
                   >
-                  code
+                  Code
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -355,15 +358,15 @@
           </li>
           <li>
             <div class="card">
-              <a href="https://clay-k0-portfolio.netlify.app/">
+              <a href="https://clay-k0.netlify.app/">
                 <img
                   class="card-image"
                   src="./assets/portfolio-screenshot.png"
                   alt="Project Image"
                   />
                 </a>
-              <h1>portfolio</h1>
-              <p>the site you're on</p>
+              <h1>Portfolio</h1>
+              <p>The site you're on</p>
               <div class="flex justify-center items-center pb-3">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer" title="HTML">
                   <img class="stack-icon p-1" src="./assets/icons/html-icon.svg" alt="HTML Icon"/>
@@ -381,7 +384,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="https://clay-k0-portfolio.netlify.app"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -389,7 +392,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/portfolio"
                 >
-                code
+                Code
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -404,8 +407,8 @@
                 alt="Project Image"
                 />
               </a>
-              <h1>instaquote</h1>
-              <p>react quote 'generator'</p>
+              <h1>Instaquote</h1>
+              <p>React quote "generator"</p>
               <div class="flex justify-center items-center pb-3 pt-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
@@ -417,7 +420,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="https://clay-k0.github.io/insta-quote/"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -425,7 +428,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/insta-quote"
                   >
-                  code
+                  Code
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -441,8 +444,8 @@
                   alt="Project Image"
                   />
                 </a>
-              <h1>project 6</h1>
-              <p>lorem ipsum dolor sit amet</p>
+              <h1>Project 6</h1>
+              <p>Lorem ipsum dolor sit amet</p>
               <div class="flex justify-center items-center pb-3">
                 <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
@@ -454,7 +457,7 @@
                   target="_blank"
                   class="notable-mentions-live-btn"
                   href="!#"
-                  >visit site</a
+                  >Visit Site</a
                 >
                 <a
                   rel="noreferrer"
@@ -462,7 +465,7 @@
                   class="notable-mentions-source-btn"
                   href="https://github.com/clay-k0/"
                 >
-                code
+                Code
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -472,23 +475,27 @@
       </div>
     </section>
 
+
     <section id="contact">
+      <hr>
       <div class="container">
-        <h2 class="section-title">contact</h2>
+        <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper ">
           <p class="contact-wrapper__text">
-            feel free to reach out to me at any time!
+            Feel free to reach out to me at any time!
           </p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:claytonking03@gmail.com"
-            >email me</a
+            >Email me</a
           >
         </div>
       </div>
     </section>
+
+    <hr>
 
     <footer class="footer navbar-static-bottom">
       <div class="container">
@@ -511,9 +518,9 @@
         <hr />
 
         <p class="footer__text">
-          © 2023 |
+          © 2023
           <a rel="noreferrer" href="https://github.com/clay-k0" target="_blank"
-            >clayton king</a
+            >Clayton King</a
           >
         </p>
       </div>
