--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="navbar load-hidden">
       <a href="/" class="site-logo">ck.</a>
-      <ul>
+      <ul class="nav-items">
         <li><a href="/#top">Home</a></li>
         <li><a href="/#about">About</a></li>
         <li><a href="/#projects">Projects</a></li>
