--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <div id="top"></div>
 
   <body>
-    <div class="navbar load-hidden">
+    <div class="navbar">
       <a href="/" class="site-logo">ck.</a>
       <ul class="nav-items">
         <li><a href="/#top">Home</a></li>
